Fix hero image overflow issue in container

--- a/css/queries.css
+++ b/css/queries.css
@@ -64,10 +64,10 @@ CALCULATING FOR DESKTOP SCREEN SIZE
     gap: 4.8rem;
   }
 
-  .pricing-plan--complete::after {
+  /* .pricing-plan--complete::after {
     top: 5%;
     right: -28%;
-  }
+  } */
 
   .testimonial-container {
     padding: 9.6rem 3.2rem;
@@ -193,12 +193,12 @@ CALCULATING FOR DESKTOP SCREEN SIZE
 
   .main-nav-link:link,
   .main-nav-link:visited {
-    font-size: 3.2rem;
+    font-size: 3rem;
   }
 }
 
 /*********************/
-/*BELOW 700px (Smaller Tablets)*/
+/*BELOW 704px (Smaller Tablets)*/
 /*********************/
 @media (max-width: 44em) {
   .grid--3-cols,
@@ -220,7 +220,7 @@ CALCULATING FOR DESKTOP SCREEN SIZE
   }
 
   .grid--footer {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(6, 1fr);
   }
 
   .logo-col,
@@ -232,5 +232,42 @@ CALCULATING FOR DESKTOP SCREEN SIZE
     grid-row: 1;
     grid-column: span 2;
     margin-bottom: 3.2rem;
+  }
+}
+
+/*********************/
+/*BELOW px 544(Phones)*/
+/*********************/
+@media (max-width: 34em) {
+  .grid {
+    row-gap: 4.8rem;
+  }
+
+  .grid--2-cols,
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: 1fr;
+  }
+
+  .btn,
+  .btn::link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+  }
+
+  .section-hero {
+    padding: 2.4rem 0 6.4rem 0;
+  }
+
+  .hero {
+    padding: 0 3.2rem;
+  }
+
+  .hero-img {
+    width: 80%;
+  }
+
+  .logos img {
+    height: 1.2rem;
   }
 }
