--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,6 @@ body {
 
 .section-hero {
   background-color: #fdf2e9;
-  height: 100vh;
   padding: 4.8rem 0 9.6rem 0;
 }
 
